--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.5.0",
+    "react-beautiful-dnd": "^9.0.2",
+    "react-dnd": "^5.0.0",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0"
