--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "bootstrap": "^4.1.3",
     "react": "^16.5.0",
     "react-beautiful-dnd": "^9.0.2",
+    "react-dice": "^1.0.1",
     "react-dnd": "^5.0.0",
     "react-dom": "^16.5.0",
+    "react-gif": "^0.1.0",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0"
   },
