--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-beautiful-dnd": "^9.0.2",
     "react-dice": "^1.0.1",
     "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
+    "react-dnd-touch-backend": "^0.5.2",
     "react-dom": "^16.5.0",
     "react-gif": "^0.1.0",
+    "react-perfect-scrollbar": "^1.4.0",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0"
   },
