--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "matteapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vanjaivanovic.github.io/MathGame/",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-beautiful-dnd": "^9.0.2",
@@ -16,11 +18,14 @@
     "react-perfect-scrollbar": "^1.4.0",
     "react-scripts": "1.1.5",
     "react-sound": "^1.2.0",
+    "react-switch": "^3.0.4",
     "react-touch": "^0.4.4",
     "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
